--- a/SSDI.RequestMonitoring.UI/JComponents/Forms/RequestRequisition__Form.razor
+++ b/SSDI.RequestMonitoring.UI/JComponents/Forms/RequestRequisition__Form.razor
@@ -309,5 +309,6 @@
         public RequestAttachType AttachType { get; set; }
         public int RequisitionId { get; set; }
         public decimal ReceiptAmount { get; set; }
+        public string ReceiptRemarks { get; set; } = string.Empty;
     }
 }
