--- a/SSDI.RequestMonitoring.UI/JComponents/Forms/JobOrder__Form.razor
+++ b/SSDI.RequestMonitoring.UI/JComponents/Forms/JobOrder__Form.razor
@@ -12,7 +12,7 @@
             <!-- Name -->
             <div class="form-group">
                 <label for="joname">Name</label>
-                <input id="joname" @bind="FormModel.Name" class="form-control" style="font-weight: 500;" placeholder="Enter your full name" disabled="@(utils.IsUser())" required />
+                <input id="joname" @bind="FormModel.Name" class="form-control" style="font-weight: 500;" placeholder="Enter your full name" disabled="@(currentUser.IsUser)" required />
             </div>
 
             <!-- Nature of Request -->
