--- a/SSDI.RequestMonitoring.UI/Pages/Auth/Login.razor
+++ b/SSDI.RequestMonitoring.UI/Pages/Auth/Login.razor
@@ -7,6 +7,7 @@
 @inject IAuthenticationSvc authenticationSvc
 @inject IDivisionSvc divisionSvc
 @inject IDepartmentSvc departmentSvc
+@inject IUserSvc userSvc
 
 <PageTitle>Request Monitoring</PageTitle>
 
